assets/css/style.css
body {
    font-family: 'Roboto', sans-serif;
    background-color: #478eff;
}

/* Colors */

.bg-color-header{
    background-color: #173058;
}

.bg-color-footer{
    background-color: #173058;
}

/* Header */ 

header{
    width: 100%;
}

.navbar{
    border: 0;
    width: 100%;
    background-color: rgba(0, 0, 0, 0);
    font-size: 14px;
}

.logo-img{
    height: auto;
    width: 80%;
    margin: 2% 0;
    margin-left: 10%;
    
}

.navbar-brand{
    font-family: 'Shadows Into Light', cursive;
    display: block;
    font-weight: bold;
    text-align: center;
    color: #fe9900;
    padding: 0;
    line-height: 1;
}

.navbar .navbar-toggler{
    background: #1c3a6a;
    border: 0;
}

.navbar-nav{
    position: relative;
    z-index: 5000;
    text-align: center;
    margin-right: 0;
    margin-left: auto;
}

.navbar-text{
    display: block;
    text-align: center;
    color: #fe9900;
    font-weight: bold;
    padding: 0;
    text-decoration: underline;
}

nav div ul li{
    background: #1c3a6a;
    border-left: 1px solid #173058;
    border-right: 1px solid #173058;
    border-collapse: collapse;
}

/* About section */

#about{
    text-align: center;
    font-size: 50px;
    margin: 10px 0;
    text-decoration: underline
}

/* Bootstrap override */

.no-padding{
    padding: 0 !important;
}

.no-margin{
    margin: 0 !important;
}

.overflow-hide{
    overflow: hidden;
}

/* Hero image */

.hero-img{
    height: 700px;
    background-image: url(../images/hero-image.png);
    background-size: cover;
    background-repeat: no-repeat;

    animation-name: hero-zoom;
    animation-duration: 10s;
    animation-fill-mode: forwards;
}

#cover-text,
#cover-text h2 {
    text-align: center;
    color: #fe9900;
}

#cover-text {
    font-family: 'Roboto', sans-serif;
    text-transform: uppercase;
    background-color: rgba(28, 58, 106, .5);
    position: absolute;
}

@keyframes hero-zoom {
    from {
        transform: scale(1);
    }
    to {
        transform: scale(1.1);
    }
}

/* Media Queiries */

@media screen and (min-width:992px){
    .navbar-nav{
        margin-right: 5px;
    }
}

@media screen and (min-width: 1200px){
    .navbar{
        margin-top: 8%;
    }

    .navbar-nav{
        font-size: 1.5rem;
    }

    .navbar-brand{
    font-size: 38px;
    margin: 12.5% 0;
    }

    .navbar-text{
    font-size: 36px;
    margin-top: 7%;
    }

}

@media screen and (max-width:2560px){
    .hero-img{
        height: 850px;
    }

    #cover-text{
        font-size: 42px;
        letter-spacing: 2px;
        width: 50%;
        height: 400px;
        bottom: 225px;
        right: 25%;
    }

    #cover-text h2 {
        font-size: 2em;
    }

}
@media screen and (max-width: 1200px){
    .navbar{
        margin-top: 5%;
    }
    .navbar-brand{
    font-size: 38px;
    margin: 5% 0;
    }

    .navbar-text{
    font-size: 34px;
    margin-top: 2%;
    }

    .navbar-nav{
        font-size: 1rem;
    }

    .hero-img{
        height: 600px;
    }

    #cover-text{
        font-size: 32px;
        letter-spacing: 2px;
        width: 50%;
        height: 300px;
        bottom: 150px;
        right: 25%;
    }

    #cover-text h2 {
        font-size: 1.5em;
    }

}

@media screen and (max-width: 992px){
    .navbar{
        margin-top: 4%;     
    }

    .navbar-brand{
    font-size: 36px;
    margin: 5% 0;
    }

    .navbar-text{
    font-size: 30px;
    margin-top: 3%;
    }

    .hero-img{
        height: 500px;
    }

    #cover-text{
        font-size: 28px;
        letter-spacing: 2px;
        width: 50%;
        height: 250px;
        bottom: 125px;
        right: 25%;
    }

    #cover-text h2 {
        font-size: 2em;
    }

}

@media screen and (max-width: 768px){
    header{
        max-height: 104px;
    }
    .navbar{
        margin-top: 0;     
    }

    .navbar-brand{
    font-size: 29px;
    margin: 18% 0;
    }

    .navbar-text{
    font-size: 26px;
    margin-top: 10%;
    }

    .navbar .navbar-toggler{
    border: 0;
    margin: 9% auto;
    }

    .navbar .navbar-toggler .navbar-toggler-icon{
    height: 60px;
    width: 60px;
    }

    .hero-img{
        height: 400px;
    }

    #cover-text{
        font-size: 22px;
        letter-spacing: 2px;
        width: 50%;
        height: 200px;
        bottom: 100px;
        right: 25%;
    }

    
}

@media screen and (max-width: 425px){
    header{
        max-height: 96px;
    }

    .navbar-brand{
    font-size: 28px;
    margin: 14% 0;
    }

    .navbar .navbar-toggler{
    border: 0;
    margin: 13% auto;
    }

    .navbar .navbar-toggler .navbar-toggler-icon{
    height: 60px;
    width: 60px;
    }

    .hero-img{
        height: 200px;
    }

    #cover-text{
        font-size: 12px;
        letter-spacing: 2px;
        width: 50%;
        height: 140px;
        bottom: 25px;
        right: 25%;
    }

    #cover-text h2 {
        font-size: 2rem;
    }
}

@media screen and (max-width: 375px){
    header{
        max-height: 85px;
    }

    .navbar-brand{
    font-size: 26px;
    margin: 13% 0;
    }

    .navbar .navbar-toggler{
    border: 0;
    margin: 14% auto;
    }

    .navbar .navbar-toggler .navbar-toggler-icon{
    height: 50px;
    width: 50px;
    }

    .hero-img{
        height: 175px;
    }

    #cover-text{
        font-size: 10px;
        letter-spacing: 2px;
        width: 50%;
        height: 120px;
        bottom: 25px;
        right: 25%;
    }

}

@media screen and (max-width: 320px){
    header{
        max-height: 72px;
    }

    .navbar-brand{
    font-size: 24px;
    margin: 11.5% 0;
    }

    .navbar .navbar-toggler{
    border: 0;
    margin: 15% auto;
    }

    .navbar .navbar-toggler .navbar-toggler-icon{
    height: 40px;
    width: 40px;
    }

    .navbar-nav{
        font-size: 0.75em;
    }

    .hero-img{
        height: 150px;
    }

    #cover-text{
        font-size: 8px;
        letter-spacing: 2px;
        width: 50%;
        height: 100px;
        bottom: 25px;
        right: 25%;
    }
}

/* Hover.css */

.hvr-sweep-to-bottom:before{
    background: #173058;
}

/* Footer */

footer {
    height: 100px;
}

.socials{
    text-align: center;
    padding: inherit;
}

.socials li {
    display: inline;
}

.socials i {
    font-size: 160%;
    margin: 1%;
    padding: 5%;
    color: #777777;
}

